--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://tasou-1109.github.io/ssr4/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
